--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 # access keys for services like Fixer.io
 etc/access_keys.properties
 
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
 # Created by https://www.gitignore.io/api/java,intellij
 
 ### Intellij ###
